k8s/cloudformation/eks-cluster.yml
# This file mainly creates an EKS Fargate kubernetes cluster. Most of the length
# is dealing with networking. We re-use the existing VPC and Internet Gateway
# but we define our own subnets (and therefore routing tables) because a cluster
# needs both public (maybe?) and private (definitely) subnets, and a lot of IPs.

AWSTemplateFormatVersion: '2010-09-09'
Description: 'code-ai kubernetes/k8s/eks fargate cluster'

Parameters:
  ClusterName:
    Type: String
    Default: "nonprod-code-ai"
    Description: "The name of the k8s/EKS cluster, canonically nonprod-code-ai. Prefix it with your stack name for dev and testing, e.g.: my-stack-code-ai"

  VpcId:
    Type: AWS::EC2::VPC::Id
    Default: vpc-6e98810a
    Description: 'Existing VPC ID to use for EKS and subnet resources.'

  InternetGatewayId:
    Type: String
    Default: igw-04a32960
    AllowedPattern: '^igw-[a-z0-9]+$'
    ConstraintDescription: 'Must be an IGW ID like igw-0123456789abcdef0.'
    Description: 'Internet Gateway attached to the existing VPC for public subnet routes.'

  PublicSubnet1Cidr:
    Type: String
    Default: 10.0.64.0/20
    Description: 'CIDR block for public subnet 1.'

  PublicSubnet2Cidr:
    Type: String
    Default: 10.0.80.0/20
    Description: 'CIDR block for public subnet 2.'

  PrivateSubnet1Cidr:
    Type: String
    Default: 10.0.192.0/20
    Description: 'CIDR block for private subnet 1.'

  PrivateSubnet2Cidr:
    Type: String
    Default: 10.0.208.0/20
    Description: 'CIDR block for private subnet 2.'

Resources:
  #=================================
  # === code-ai EKS Cluster ===
  #=================================

  # Create the code-dot-org Kubernetes cluster
  EKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      # ClusterName is canonically *-code-ai:
      Name: !Ref ClusterName
      Version: "1.35" # kubernetes version, increase to upgrade or use EKS console
      RoleArn: !GetAtt EKSClusterRole.Arn
      AccessConfig:
        # use AWS::EKS::AccessEntry objects to configure cluster IAM access:
        AuthenticationMode: API 
      ResourcesVpcConfig:
        SubnetIds:
          - !Ref PublicSubnet1
          - !Ref PublicSubnet2
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        SecurityGroupIds:
          - !Ref ClusterSecurityGroup

  #============================================================
  # Cluster RBAC based on AWS IAM roles (affects kubectl etc)
  #============================================================
  EngineeringReadOnlyAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      ClusterName: !Ref EKSCluster
      PrincipalArn: arn:aws:iam::475661607190:role/Engineering_ReadOnly
      AccessPolicies:
        - PolicyArn: arn:aws:eks::aws:cluster-access-policy/AmazonEKSViewPolicy
          AccessScope:
            Type: cluster

  EngineeringFullAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      ClusterName: !Ref EKSCluster
      PrincipalArn: arn:aws:iam::475661607190:role/Engineering_FullAccess
      AccessPolicies:
        - PolicyArn: arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy
          AccessScope:
            Type: cluster

  GoogleAdminAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      ClusterName: !Ref EKSCluster
      PrincipalArn: arn:aws:iam::475661607190:role/GoogleAdmin
      AccessPolicies:
        - PolicyArn: arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy
          AccessScope:
            Type: cluster

  # TODO: Consider access entries for these IAM Identity Center reserved roles:
  # AWSReservedSSO_InfraEngineer-Standard_*
  # AWSReservedSSO_InfraEngineer-BreakGlass_*
  # AWSReservedSSO_InfraEngineer-ReadOnlyAccess_*
  # We should confirm whether these suffixes are stable enough for IaC references.

  #=================================================
  # === A Fargate Profile for each k8s namespace ===
  #==================================================

  # Fargate is AWS's "serverless" provider for Kubernetes Pods.
  # It allows Pods to run without managing EC2 instances.
  # It costs about 20% more than dedicated EC2 instances, but
  # you save 33% on K8S footguns, so scientifically its a 13% win.

  # default namepace: for all your f around and find out needs
  DefaultFargateProfile:
    Type: AWS::EKS::FargateProfile
    Properties:
      ClusterName: !Ref EKSCluster
      FargateProfileName: default
      PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
      Subnets:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Selectors:
        # Eventually some of these should be in their own profile, but for now simple wins:
        - Namespace: default
        - Namespace: staging
        - Namespace: test
        - Namespace: levelbuilder
        - Namespace: infra
        - Namespace: argocd
        - Namespace: kube-system
        # Production being here is a temporary hack while we're not actually IN production,
        # this should probably be its own cluster, more security analysis TBD. For now,
        # we pay on a per-cluster basis, and we want our experiments to be cheap until we're
        # ready. Also, see below for an alternative approach to keeping prod in a special namespace.
        - Namespace: production

  # # staging namespace
  # Staging:
  #   Type: AWS::EKS::FargateProfile
  #   Properties:
  #     ClusterName: !Ref EKSCluster
  #     FargateProfileName: staging
  #     PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
  #     Subnets:
  #       - !Ref PrivateSubnet1
  #       - !Ref PrivateSubnet2
  #     Selectors:
  #       - Namespace: staging
  #
  # # test namespace
  # Test:
  #   Type: AWS::EKS::FargateProfile
  #   Properties:
  #     ClusterName: !Ref EKSCluster
  #     FargateProfileName: test
  #     PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
  #     Subnets:
  #       - !Ref PrivateSubnet1
  #       - !Ref PrivateSubnet2
  #     Selectors:
  #       - Namespace: test
  #
  # # production namespace
  # #
  # # FIXME: at a minimum, prod should have its own PrivateSubnets
  # #
  # Production:
  #   Type: AWS::EKS::FargateProfile
  #   Properties:
  #     ClusterName: !Ref EKSCluster
  #     FargateProfileName: production
  #     PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
  #     Subnets:
  #       - !Ref PrivateSubnet1 # FIXME: prod should have its own
  #       - !Ref PrivateSubnet2 # FIXME: prod should have its own
  #     Selectors:
  #       - Namespace: production
  #
  # # Fargate profile for CoreDNS and other kube-system Pods
  # KubeSystem:
  #   Type: AWS::EKS::FargateProfile
  #   Properties:
  #     ClusterName: !Ref EKSCluster
  #     FargateProfileName: kube-system
  #     PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
  #     Subnets:
  #       - !Ref PrivateSubnet1
  #       - !Ref PrivateSubnet2
  #
  # # Fargate profile for ArgoCD to run on AWS Fargate
  # ArgoCD:
  #   Type: AWS::EKS::FargateProfile
  #   Properties:
  #     ClusterName: !Ref EKSCluster
  #     FargateProfileName: argocd
  #     PodExecutionRoleArn: !GetAtt EKSFargatePodExecutionRole.Arn
  #     Subnets:
  #       - !Ref PrivateSubnet1
  #       - !Ref PrivateSubnet2
  #     Selectors:
  #       - Namespace: argocd
  #   # DependsOn forces profiles to be deployed sequentially, otherwise they try
  #   # in parallel (which fargate doesn't allow) and the second one times out:
  #   DependsOn: DefaultFargateProfile


  # === IAM Roles for EKS & Fargate ===
  # IAM role allowing EKS to manage cluster operations
  EKSClusterRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: eks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-eks-cluster-role"

  # IAM role for Fargate Pod execution, granting permissions to manage Pods
  EKSFargatePodExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${AWS::StackName}-fargate-pod-execution-role"
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: eks-fargate-pods.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-fargate-pod-execution-role"

  # ====================
  # ===  NETWORKING  ===
  # ====================

  # We have public and private subnets for the cluster, each in two AZs for 
  # high availability. If and when we want a real production namespace, it should
  # be segmented into its own private subnets.

  # === Networking and VPC Configuration ===
  # Existing VPC hosts EKS resources (passed via parameter).

  # Security group for EKS Cluster networking
  ClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EKS Cluster security group
      VpcId: !Ref VpcId
      Tags:
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: owned


  # =========================
  # === PUBLIC NETWORKING ===
  # =========================

  # === Public Routing ===
  # Public route table and route to the Internet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGatewayId

  # === Public Subnets ===
  # Public subnets with ELB role for external access
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VpcId
      CidrBlock: !Ref PublicSubnet1Cidr
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: shared

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VpcId
      CidrBlock: !Ref PublicSubnet2Cidr
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: shared

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable


  # ==========================
  # === PRIVATE NETWORKING ===
  # ==========================

  # === NAT Gateway for Private Subnets ===
  # Provides private subnets outbound-only internet access,
  # Placed in a PublicSubnet so it itself can access the internet
  # and proxies outbound traffic from private subnets to PublicSubnet1
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  # Allocates a public IP address to the NatGateway for outbound traffic
  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # Second NAT Gateway for high availability
  NATGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2

  NATGatewayEIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # === Private Routing ===
  # Private route tables for each private subnet
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId

  # Routes for private subnets to access the NAT Gateway
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGateway

  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGateway2


  # === Private Subnets ===
  # Private subnets for internal services
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VpcId
      CidrBlock: !Ref PrivateSubnet1Cidr
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: shared

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VpcId
      CidrBlock: !Ref PrivateSubnet2Cidr
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: shared

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

Outputs:
  ClusterName:
    Description: 'EKS Cluster Name'
    Value: !Ref EKSCluster

  ClusterEndpoint:
    Description: 'EKS Cluster Endpoint'
    Value: !GetAtt EKSCluster.Endpoint

  ClusterSecurityGroupId:
    Description: 'EKS Cluster Security Group ID'
    Value: !Ref ClusterSecurityGroup

  VPCId:
    Description: 'VPC ID'
    Value: !Ref VpcId

  PublicSubnet1Id:
    Description: 'Public Subnet 1 ID'
    Value: !Ref PublicSubnet1

  PublicSubnet2Id:
    Description: 'Public Subnet 2 ID'
    Value: !Ref PublicSubnet2

  PrivateSubnet1Id:
    Description: 'Private Subnet 1 ID'
    Value: !Ref PrivateSubnet1

  PrivateSubnet2Id:
    Description: 'Private Subnet 2 ID'
    Value: !Ref PrivateSubnet2
